# libvmod-dateformat

./: .travis.yml  CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  vmod_dateformat.c  vmod_dateformat.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc
